# rift

./: ;  Cargo.toml  README.md  \
src/: main.rs
src/backend/: chat.rs
src/error/: mod.rs
src/frontend/: application.rs  message.rs  mod.rs  notification.rs
src/frontend/pages/: add_chat_page.rs  browse_chats_page.rs  chat_page.rs  mod.rs
src/frontend/widget/: mod.rs  packet_widget.rs
src/networking/: connection_manager.rs  error.rs  foreign_manager.rs  mod.rs  packet.rs  server.rs
src/util/: channel.rs  mod.rs  relay.rs
