[package]
name = "iroh-ftp-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
async-channel = "2.5.0"
iced = { version = "0.14", features = ["tokio", "image", "advanced", "svg"] }
image = "0.25.9"
iroh = "0.95.1"
pin-project = "1.1.10"
rand = "0.9.2"
tokio = { version = "1.48.0", features = ["full"] }
